--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "axios": "^0.18.0",
+    "node-sass": "^4.11.0"
+  }
 }
